[branch dev-btm]: CHECKPOINT-  - added smart proxy implementations of the transaction service and shard locator (metadata) service. Also made changes to allow those smart proxy implementations to be started by the ServicesManagerService or BootManager, as well as added new and changed current tests to run against either the smart proxy implementation of those services or the purely remote implemenations. Note that this work is still incomplete, and so includes numerous debug println's and BTM markers; which will be cleaned up in the final commit. Note finally that this changeset also includes hand-merged changes from the trunk for the following changesets: 3434, 3435, 3436, 3437, 3441, 3445, 3447, 3457, 3458, 3459, 3460
git-svn-id: https://svn.code.sf.net/p/bigdata/code/branches/dev-btm@3463 8f7bc0f5-282e-0410-95e3-8d296e9bb460